<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TrackDetail_display"
    tools:showIn="@layout/activity_track_detail_display">


    <TextView
        android:id="@+id/textView_Track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Track"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_TrackList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_TrackList"
        app:layout_constraintStart_toEndOf="@+id/textView_Track"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Price"
        app:layout_constraintStart_toEndOf="@+id/textView_TrackList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_PriceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_PriceList"
        app:layout_constraintStart_toEndOf="@+id/textView_Price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Dollar"
        app:layout_constraintStart_toEndOf="@+id/textView_PriceList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Artist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Track" />

    <TextView
        android:id="@+id/textView_ArtistList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_ArtistList"
        app:layout_constraintStart_toEndOf="@+id/textView_Artist"
        app:layout_constraintTop_toBottomOf="@+id/textView_TrackList" />

    <TextView
        android:id="@+id/textView_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_Date"
        app:layout_constraintStart_toEndOf="@+id/textView_ArtistList"
        app:layout_constraintTop_toBottomOf="@+id/textView_Price" />

    <TextView
        android:id="@+id/textView_DateList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/String_DateList"
        app:layout_constraintStart_toEndOf="@+id/textView_Date"
        app:layout_constraintTop_toBottomOf="@+id/textView_PriceList" />
</android.support.constraint.ConstraintLayout>